--- a/src/pages/MobileSignIn/MobileSignIn.module.css
+++ b/src/pages/MobileSignIn/MobileSignIn.module.css
@@ -38,9 +38,12 @@ h1{
 .messageBox{
   height:0.2rem;
 }
+p{
+  color:#0eb1d7;
+}
 .buttonBox{
   width:100%;
-  height:0.5rem;
+  height:0.4rem;
   color:#ffffff;
   font-size:0.18rem;
   background-color:#07a3c8;
