--- a/src/pages/WelcomPage/WelcomPage.module.css
+++ b/src/pages/WelcomPage/WelcomPage.module.css
@@ -1,5 +1,5 @@
 .welcomContainer{
-  width:75vw;
+  width:70vw;
   margin:0 auto;
   margin-top:20vh
 }
@@ -10,7 +10,8 @@
   width:100%;
 }
 
-h1{
+.welcomContainer h1{
   margin-top:1rem;
-  font-size:0.24rem;
+  font-size:0.20rem;
+  width:100%;
 }
