add search patient function

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,7 +5,7 @@
   height:0.50rem;
   display: flex;
   background-color: #ffffff;
-  padding-top:0.1rem;
+  padding:0.1rem;
   box-sizing: border-box;
 }
 .imgBox{
