--- a/src/pages/PatientList/PatientList.module.css
+++ b/src/pages/PatientList/PatientList.module.css
@@ -4,6 +4,22 @@
 
 .listBox{
   width:100%;
-  padding-top:0.50rem;
   padding-bottom:0.68rem;
+}
+
+.searchBox{
+  width:100%;
+  margin-top:0.45rem;
+  padding:0.1rem 0.2rem;
+  box-sizing: border-box;
+}
+.inputBox{
+  width:100%;
+  height:0.4rem;
+  background-color: #f8f8f8;
+  border:none;
+  color:#a3abb9;
+  font-size: 0.16rem;  
+  outline:none;
+  border-radius: 10px;
 }
