--- a/src/pages/NewPatient/NewPatient.module.css
+++ b/src/pages/NewPatient/NewPatient.module.css
@@ -13,6 +13,13 @@
   height:0.8rem;
 }
 
+.rowRadio{
+  text-align: left;
+}
+.rowRadio span{
+  margin-right:0.5rem;
+}
+
 .inputBox{
   width:100%;
   height:0.4rem;
