--- a/src/pages/PatientDetail/PatientDetail.module.css
+++ b/src/pages/PatientDetail/PatientDetail.module.css
@@ -1,13 +1,38 @@
-.patientDetail .header{
-  width:100%;
-  height:0.50rem;
+
+.detalBox{
+  margin-top:0.5rem;
   display: flex;
+  justify-content: center;
+}
+
+.detalBox .iconBox{
+  background-color: #f7f7f7;
+  width: 100%;
+  padding: 0.2rem;
+}
+.detalBox .iconBg{
+  background-color: #e8edeb;
+  width:1.16rem;
+  height:1.16rem;
+  border-radius: 1.16rem;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  margin: 0 auto;
+}
+
+.deleteButton{
   background-color: #ffffff;
-  padding:0.1rem;
-  box-sizing: border-box;
-  font-size:0.24rem;
-  color:#333333;
-  margin-left:0.1rem;
-  flex:1;
-  margin:0px;
+  font-size:0.14rem;
+  color:#bcbaba;
+  border: 1px #e1e3e7 solid;
+  border-radius: 0.05rem;
+  width:1.16rem;
+  height:0.3rem;
+  margin-top:0.2rem;
+}
+
+.detalBox .iconBox img{
+  width:0.96rem;
+  height:0.96rem;
 }
