--- a/src/pages/DesktopSignIn/DesktopSignIn.module.css
+++ b/src/pages/DesktopSignIn/DesktopSignIn.module.css
@@ -1,6 +1,69 @@
+
 .signInBox{
-  background-color: aquamarine;  
+  background-color: #fff;  
+  text-align: left;
+  width:60vw;
+  margin:0px auto;
 }
-.singInBox h1{
-  color: rgb(3, 99, 109);
+h1{
+  color: #333333;
+  width:80%;
+  margin:0 auto;
+  text-align: center;
 }
+.signInContainer{
+  width:30vw;
+  margin:0 auto;
+  margin-top:10vh;
+  
+}
+.hearderImg{
+  width:100%;
+ 
+}
+.signInForm{
+  width:50%;
+  margin:0 auto;
+  margin-top:0.4rem;
+  margin-bottom:0.4rem;
+}
+.inputBox{
+  width:100%;
+  height:0.4rem;
+  border:none;
+  border-bottom:1px solid #e1e3e7; 
+  color:#a3abb9;
+  font-size: 0.16rem;  
+  outline:none;
+}
+.inputBox:first-child{
+  margin-bottom:0.3rem;
+}
+.messageBox{
+  height:0.2rem;
+}
+p{
+  color:#0eb1d7;
+}
+.buttonBox{
+  width:100%;
+  height:0.4rem;
+  color:#ffffff;
+  font-size:0.18rem;
+  background-color:#07a3c8;
+  border:none;
+  border-radius: 10px;
+}
+.testcode{
+  width:50%;
+  margin:0px auto;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+/*backgroud color*/
+
+box-shadow:0 0 0 60px #fff inset; 
+/*font color*/
+-webkit-text-fill-color: #a3abb9;}
+
