add all pages for desktop

--- a/src/pages/ChatDetail/ChatDetailForDesktop.module.css
+++ b/src/pages/ChatDetail/ChatDetailForDesktop.module.css
@@ -1,15 +1,13 @@
 .chatDetail{
   position: relative;
-  background-color: #f8f8f8;
   height:calc(100vh - 150px);
   overflow-y: auto;
 }
 
 .detalBox{
-  margin-top:0.5rem;
   justify-content: center;
-  padding:0.2rem;
-  height: calc(100vh - 1.5rem);
+  padding:20px 20px 70px 20px;
+  height: calc(100vh - 190px);
   overflow-y: auto;
 }
 
@@ -79,8 +77,8 @@
 }
 
 .searchBox{
-  width:100%;
-  padding:0.1rem 0.2rem;
+  width:calc(100vw - 300px);
+  padding:10px;
   box-sizing: border-box;
   position: fixed;
   background-color: #ffffff;
@@ -93,6 +91,9 @@
 }
 .searchBox .form{
   flex:1;
+}
+.searchBox img{
+  cursor: pointer;
 }
 .inputBox{
   width:100%;
