--- a/src/pages/DesktopHome/DesktopHome.module.css
+++ b/src/pages/DesktopHome/DesktopHome.module.css
@@ -2,6 +2,7 @@
   width:100%;
   height:100vh;
   min-width: 800px;
+  display: flex;
 }
 .leftbox{
   width:300px;
@@ -11,6 +12,7 @@
   overflow-x:hidden;
 }
 .rightbox{
-  width:70vw;
-  height:100vh
+  width:calc(100vw - 300px);
+  height:100vh;
+  overflow: hidden;
 }
